--- a/views/index.jade
+++ b/views/index.jade
@@ -4,6 +4,8 @@ html
         title hashtag :: Koding 2014 Hackathon Challenge
 
         link(rel='stylesheet' href='/css/styles.css' type='text/css')
+        script(src='/socket.io/socket.io.js')
+        script(src='/js/hashtag.js')
 
     body
 
