--- a/less/styles.less
+++ b/less/styles.less
@@ -1,3 +1,41 @@
+HTML {
+	height: 100%;
+}
+
 body {
     background: #f5f5f5;
+	height: 100%;
+}
+
+.sudo-zone {
+	height: 100%;
+}
+
+.upper-outer-zone {
+	background-color: rgb(255, 0, 0);
+	display: block;
+	height: 50%;
+	width: 100%;
+}
+
+.lower-outer-zone {
+	background-color: rgb(0, 255, 0);
+	display: block;
+	height: 50%;
+	width: 100%;
+}
+
+.inner-zone {
+	height: 60%;
+	width: 60%;
+	background-color: white;
+	position: absolute;
+	top: 20%;
+	left: 20%;
+}
+
+.toothpick-column {
+	float: left;
+	width: 30%;
+	text-align: center;
 }
