--- a/views/index.jade
+++ b/views/index.jade
@@ -4,12 +4,12 @@ html
         title hashtag :: Koding 2014 Hackathon Challenge
 
         link(rel='stylesheet' href='/css/styles.css' type='text/css')
-        
+
         script(src='/js/jquery-2.1.1.min.js')
         script(src='http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js')
+        script(src='http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-cookies.js')
 
         script(src='/socket.io/socket.io.js')
-        script(src='/js/hashtag.js')
         script(src='/js/engine.js')
 
     body(ng-app="ToothpickApp" ng-controller="ToothpickController")
@@ -20,6 +20,8 @@ html
             div(class="inner-zone")
                 div(class="toothpick-column toothpick-column-3")
                     div(class="toothpick" draggable="true" ng-repeat="tp in column3") {{tp}}
+                    div
+                        button(ng-click='takeTurn()') take turn
                 div(class="toothpick-column toothpick-column-6")
                     div(class="toothpick" draggable="true" ng-repeat="tp in column6") {{tp}}
                 div(class="toothpick-column toothpick-column-9")
