--- a/less/styles.less
+++ b/less/styles.less
@@ -12,14 +12,14 @@ body {
 }
 
 .upper-outer-zone {
-	background-color: rgb(255, 0, 0);
+	background-color: #F0DBB4;
 	display: block;
 	height: 50%;
 	width: 100%;
 }
 
 .lower-outer-zone {
-	background-color: rgb(0, 255, 0);
+	background-color: #C1E4C1;
 	display: block;
 	height: 50%;
 	width: 100%;
@@ -32,10 +32,18 @@ body {
 	position: absolute;
 	top: 20%;
 	left: 20%;
+	border: 5px solid #8B572A;
 }
 
 .toothpick-column {
 	float: left;
-	width: 30%;
+	width: 33%;
 	text-align: center;
+}
+
+.toothpick {
+	background-color: #F5A623;
+	height: 10px;
+	margin: 13px;
+	font-size: 9px;
 }
