--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,13 +9,13 @@ body {
   height: 100%;
 }
 .upper-outer-zone {
-  background-color: #ff0000;
+  background-color: #F0DBB4;
   display: block;
   height: 50%;
   width: 100%;
 }
 .lower-outer-zone {
-  background-color: #00ff00;
+  background-color: #C1E4C1;
   display: block;
   height: 50%;
   width: 100%;
@@ -27,9 +27,16 @@ body {
   position: absolute;
   top: 20%;
   left: 20%;
+  border: 5px solid #8B572A;
 }
 .toothpick-column {
   float: left;
-  width: 30%;
+  width: 33%;
   text-align: center;
+}
+.toothpick {
+  background-color: #F5A623;
+  height: 10px;
+  margin: 13px;
+  font-size: 9px;
 }
