--- a/views/index.jade
+++ b/views/index.jade
@@ -23,8 +23,8 @@ html
             div(class="outer-zone lower-outer-zone")
             div(class="inner-zone")
                 div(class="toothpick-column toothpick-column-3")
-                    div(class="toothpick" draggable="true" ng-repeat="tp in columns.column3") {{tp}}
+                    div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column3") {{tp}}
                 div(class="toothpick-column toothpick-column-6")
-                    div(class="toothpick" draggable="true" ng-repeat="tp in columns.column6") {{tp}}
+                    div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column6") {{tp}}
                 div(class="toothpick-column toothpick-column-9")
-                    div(class="toothpick" draggable="true" ng-repeat="tp in columns.column9") {{tp}}
+                    div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column9") {{tp}}
