--- a/views/index.jade
+++ b/views/index.jade
@@ -19,6 +19,8 @@ html
         div(class="sudo-zone")
             div(style="position: absolute; margin: 20px;" ng-if="me.isTurn") Thats your turn
             div(style="position: absolute; margin: 20px;" ng-if="!me.isTurn") Thats your opponent turn
+            div(style="position: absolute; margin: 20px;")
+                button(ng-click="startGame()") Start
             div(class="outer-zone upper-outer-zone")
             div(class="outer-zone lower-outer-zone")
             div(class="inner-zone")
