--- a/less/styles.less
+++ b/less/styles.less
@@ -9,6 +9,7 @@ body {
 
 .sudo-zone {
 	height: 100%;
+    min-height: 400px
 }
 
 .upper-outer-zone {
@@ -33,6 +34,8 @@ body {
 	top: 20%;
 	left: 20%;
 	border: 5px solid #8B572A;
+  	border-radius: 5px;
+  	min-height: 240px;
 }
 
 .toothpick-column {
@@ -42,8 +45,10 @@ body {
 }
 
 .toothpick {
-	background-color: #F5A623;
-	height: 10px;
 	margin: 13px;
 	font-size: 9px;
+
+	img {
+	  width: 100%;
+	}
 }
