--- a/views/index.jade
+++ b/views/index.jade
@@ -26,8 +26,11 @@ html
             div(class="outer-zone lower-outer-zone")
             div(class="inner-zone")
                 div(class="toothpick-column toothpick-column-3")
-                    div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column3") {{tp}}
+                    div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column3")
+                        img(src="/images/toothpick_1024.png")
                 div(class="toothpick-column toothpick-column-6")
-                    div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column6") {{tp}}
+                    div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column6")
+                        img(src="/images/toothpick_1024.png")
                 div(class="toothpick-column toothpick-column-9")
-                    div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column9") {{tp}}
+                    div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column9")
+                        img(src="/images/toothpick_1024.png")
