--- a/views/index.jade
+++ b/views/index.jade
@@ -16,17 +16,17 @@ html
 
     body(ng-app="ToothpickApp" ng-controller="ToothpickController")
 
-        div(class="sudo-zone")
-            div(style="position: absolute; margin: 20px;" ng-if="me.gameStarted && me.isTurn") Thats your turn
-            div(style="position: absolute; margin: 20px;" ng-if="me.gameStarted && !me.isTurn") Thats your opponent turn
-            div(style="position: absolute; margin: 20px;" ng-if="me.gameRequired && !me.gameStarted") Waiting for someone
-            div(style="position: absolute; margin: 20px;" ng-if="!me.gameRequired || me.gameOver")
+        div(class="message-container")
+            div(ng-if="me.gameStarted && me.isTurn") Thats your turn
+            div(ng-if="me.gameStarted && !me.isTurn") Thats your opponent turn
+            div(ng-if="me.gameRequired && !me.gameStarted") Waiting for someone
+            div(ng-if="!me.gameRequired || me.gameOver")
                 button(ng-click="startGame()") Start
+        
+            div(ng-if="me.gameOver && me.winner") You win!
+            div(ng-if="me.gameOver && !me.winner") You loser!
 
-            div(style="position: absolute; margin: 20px;" ng-if="me.gameOver")
-                div(style="position: absolute; margin: 20px;" ng-if="me.winner") You win!
-                div(style="position: absolute; margin: 20px;" ng-if="!me.winner") You loser!
-
+        div(class="sudo-zone")
             div(class="outer-zone upper-outer-zone")
             div(class="outer-zone lower-outer-zone")
             div(class="inner-zone")
