--- a/less/styles.less
+++ b/less/styles.less
@@ -54,6 +54,12 @@ body {
 }
 
 .message-container {
-	position: absolute; 
-	margin: 20px;
+	width: 55%;
+	position: absolute;
+	top: 25px;
+	margin: 25px;
+	left: 20%;
+	font-family: Helvetica HelveticaNeue;
+	font-size: 34px;
+	text-align: center;
 }
