--- a/less/styles.less
+++ b/less/styles.less
@@ -54,6 +54,7 @@ body {
 }
 
 .message-container {
+
 	width: 55%;
 	position: absolute;
 	top: 25px;
@@ -63,3 +64,28 @@ body {
 	font-size: 34px;
 	text-align: center;
 }
+
+.splash {
+	opacity: .8;
+	font-family: 'Josefin Sans' !important;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 40px;
+
+
+
+	.splash-head {
+		font-weight: bolder;
+		padding: 10px;
+	}
+	
+	.splash-rule {
+		padding: 5px 10px;
+	}
+
+	button {
+		font-size: 50px;
+		margin-left: 15px;
+	}
+}
+
