Fix:dgrabble of toothpick got broke from previous build

--- a/views/index.jade
+++ b/views/index.jade
@@ -31,10 +31,10 @@ html
             div(class="inner-zone")
                 div(class="toothpick-column toothpick-column-3")
                     div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column3")
-                        img(src="/images/toothpick_1024.png")
+                        img(src="/images/toothpick_1024.png"  )
                 div(class="toothpick-column toothpick-column-6")
                     div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column6")
-                        img(src="/images/toothpick_1024.png")
+                        img(src="/images/toothpick_1024.png"  draggable="{{me.isTurn}}")
                 div(class="toothpick-column toothpick-column-9")
                     div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column9")
                         img(src="/images/toothpick_1024.png")
