Add opacity when drag  toothpick

--- a/less/styles.less
+++ b/less/styles.less
@@ -44,7 +44,7 @@ body {
 	text-align: center;
 }
 
-.toothpick {
+.toothpick, .tp {
 	margin: 13px;
 	font-size: 9px;
 
@@ -89,3 +89,32 @@ body {
 	}
 }
 
+.transparent {
+	opacity: 0.5;
+}
+
+.tp-enter {
+    -webkit-transition: 1s linear all;
+    -moz-transition: 1s linear all;
+    -ms-transition: 1s linear all;
+    -o-transition: 1s linear all;
+    transition: 1s linear all;
+    opacity: 0;
+} 
+
+ .tp-enter.tp-enter-active {
+    opacity: 1;
+}
+
+ .tp-leave {
+    -webkit-transition: 12s linear all;
+    -moz-transition: 12s linear all;
+    -ms-transition: 12s linear all;
+    -o-transition: 12s linear all;
+    transition: 12s linear all;
+    opacity: 1;
+}
+
+ .tp-leave.tp-leave-active {
+    opacity: 0;
+}
