--- a/views/index.jade
+++ b/views/index.jade
@@ -30,13 +30,13 @@ html
             div(class="outer-zone lower-outer-zone")
             div(class="inner-zone")
                 div(class="toothpick-column toothpick-column-3")
-                    div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column3")
+                    div(class="toothpick tp" draggable="{{me.isTurn}}" ng-animate="'tp'" ng-repeat="tp in columns.column3")
                         img(src="/images/toothpick_1024.png"  )
                 div(class="toothpick-column toothpick-column-6")
-                    div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column6")
+                    div(class="toothpick tp" draggable="{{me.isTurn}}" ng-animate="animate" ng-repeat="tp in columns.column6")
                         img(src="/images/toothpick_1024.png"  draggable="{{me.isTurn}}")
                 div(class="toothpick-column toothpick-column-9")
-                    div(class="toothpick" draggable="{{me.isTurn}}" ng-repeat="tp in columns.column9")
+                    div(class="toothpick" draggable="{{me.isTurn}}" ng-animate="animate" ng-repeat="tp in columns.column9")
                         img(src="/images/toothpick_1024.png")
 
             div(class="inner-zone splash" ng-if="!me.gameRequired || me.gameOver")
