-Rearranged the place where the 'You win/lose' message comes -Added button for play again

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -71,7 +71,8 @@ body {
   padding: 5px 10px;
 }
 .splash button {
-  font-size: 50px;
+  font-size: 30px;
+  font-weight: bold;
   margin-left: 15px;
 }
 .transparent {
