--- a/less/styles.less
+++ b/less/styles.less
@@ -72,7 +72,10 @@ body {
 	font-weight: 400;
 	font-size: 40px;
 
-
+	p {
+		margin: 0;
+		padding: 0;
+	}
 
 	.splash-head {
 		font-weight: bolder;
